dynamic feature module added random user api changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="errorUserRequest">Error retrieving users. Try again refreshing the view.</string>
 
     <string name="txtVersion">Version %s</string>
+    <string name="title_usersupport">User Support</string>
 </resources>
